--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         "whitelist" : [ "AvianFlu", "Marak", "hij1nx", "indexzero", "DTrejo", "tmpvar", "ryah", "dominictarr" ]
       },
       "freenode" : {
-        "mute_timer" : 60000,
+        "mute_timer" : 60,
         "command_string" : "!",
         "oplist" : [ "Marak", "hij1nx", "indexzero" ],
         "voicelist" : [ "AvianFlu", "SubStack", "nlco", "nexxy" ],
@@ -29,10 +29,10 @@
     ],
     "auth" : {
       "twitter" : {
-        "consumer_key" : "sWvfF8J95xN2hGYRQ",
-        "consumer_secret" : "0KYKek4Lh0RmAzQfV0MupQ0Ke7DCg12fa0dzl3J5kQ",
-        "access_token_key" : "299396879-93zJ6HBIz7YE6TYBsOZscQ4v7HjA0myLE8ttsPS3",
-        "access_token_secret" : "pNp1JlVmyaWED4G1PdchOoxs0auv6gPsVxbUp9YQ8"
+        "consumer_key" : "",
+        "consumer_secret" : "",
+        "access_token_key" : "",
+        "access_token_secret" : ""
       },
       "freenode" : {
         "nick" : "kohai",
