--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "config" : {
     "nick" : "kohai",
     "server" : "irc.freenode.net",
-    "channels" : ["#kohai", "#nodejitsu", "#nodetestsu"],
+    "channels" : ["#kohai", "#nodetestsu"],
     "plugins" : {
       "twitter" : {
         "track" : [
