--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kohai",
   "author": "nodejitsu",
-  "version": "0.0.82",
+  "version": "0.0.83",
   "preferGlobal": "true",
   "repository": {
     "type": "git",
@@ -22,7 +22,9 @@
     "dnode" : "0.6.x",
     "hashish" : ">=0.0.2",
     "winston" : "0.2.x",
-    "levenshtein" : ">=1.0.0"
+    "levenshtein" : ">=1.0.0",
+    "unshortener" : ">=0.0.6",
+    "bitly" : "1.0.x"
   },
   "devDependencies": {},
   "bin": {
