[fix] package.json fix

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "./lib/kohai",
   "engines": {
-    "node": "v0.4.7"
+    "node": ">=0.4.7"
   },
   "dependencies": {
     "irc" : "0.2.x",
