--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,6 @@ node_modules/oauth/
 node_modules/pkginfo/
 node_modules/unshortener/
 node_modules/winston/
+node_modules/JS-Entities/
+node_modules/translate/
 logs/
