[dist] Added hook.io hook dependencies.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "main": "./lib/kohai",
     "dependencies": {
        "hook.io": "0.7.x",
-       "colors": "0.5.x"
+       "colors": "0.5.x",
+       "hook.io-irc": "0.4.x",
+       "hook.io-twitter": "0.3.x",
+       "hook.io-mailer": "0.3.x"
      }, 
     "engine": [
         "node 0.4.x" 
