--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "kohai",
     "description": "IRC bot for managing real-time data events.",
-    "version": "0.1.1",
-    "author": "AvianFlu",
+    "version": "0.1.2",
+    "author": "AvianFlu <charlie@charlieistheman.com>",
     "repository": {
         "type": "git", 
         "url": "http://github.com/nodejitsu/kohai.git" 
