--- a/config.json
+++ b/config.json
@@ -1,10 +1,5 @@
 {
   "version": "v0.1.3",
-  "children": [
-    "irc",
-    "twitter",
-    "mailer"
-  ],
   "access": {
     "admin": [
       "AvianFlu",
@@ -31,15 +26,6 @@
     "employee",
     "friend"
   ],
-  "insults": [
-    "%% is a wombat-loving heifer-puncher!",
-    "%% is an unsightly trouser stain!",
-    "%% is a venomous lily-licker!",
-    "%% smells of elderberry wine!",
-    "%% is like one of those callbacks that just won't fire.",
-    "I slap thee verily with a trout quite large, %%!",
-    "%% actually looks rather nice today."
-  ],
   "help": {
     "password": "To reset your password, type `jitsu users forgot [username]`. To change it, type `jitsu users changepassword`.",
     "handbook": "The complete Nodejitsu handbook can be read at http://github.com/nodejitsu/handbook",
@@ -56,7 +42,7 @@
   "irc-server": "irc.freenode.net",
   "port": 6667,
   "nick": "kohai-default",
-  "channels": ["#nodebombrange", "#kohai"],
+  "channels": ["#nodebombrange", "#kohai", "#hook.io"],
   "showErrors": "true",
   "userName": "kohai",
   "realName": "the lovable IRC bot",
