[refactor] Added broadway for plugin system

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
      "hook.io": "0.8.x",
      "colors": "0.5.x",
+     "broadway": "0.1.x",
      "hook.io-irc": "0.4.x"
   },
   "engines": {
