--- a/config.json
+++ b/config.json
@@ -33,21 +33,21 @@
     "%% actually looks rather nice today."
   ],
   "help": {
-    "us1": "Support - http://support.us.darkfallonline.com - Status Coming Soon!",
-    "eu1": "Support - http://support.darkfallonline.com - Status Coming Soon!",
-    "noaccount": "Please e-mail noaccount@aventurine.gr if you cannot log in to your account",
+    "blog": "http://www.embersofcaerus.com/blog.php",
+    "forum": "http://www.embersofcaerus.com/forum/forum.php",
+    "site": "http://www.forsakenstudios.com/",
     "like": "Type !like [drink] to select drink you get when you receive karma"
   },
   "irc-server": "irc.stratics.com",
   "port": 6667,
-  "nick": "dfbot",
+  "nick": "forsakenbot",
   "password": "3176df2k11&3@%",
   "channels": [
-    "#darkfall"
+    "#forsakenstudios"
   ],
   "showErrors": "true",
-  "userName": "DFBot",
-  "realName": "www.ilovedarkfall.com",
+  "userName": "ForsakenBot",
+  "realName": "www.forsakenstudios.com",
   "idCheck": false,
   "channelDefaults": {
     "commandString": "!",
@@ -75,10 +75,9 @@
     }
   },
   "track": [
-    "Darkfall",
-    "#darkfall",
-    "@darkfallmmorpg",
-    "@ilovedarkfall"
+    "forsaken studios",
+    "embers of caerus",
+    "@forsakenstudios"
   ],
   "follow": [],
   "recentTweets": [
@@ -87,21 +86,28 @@
   ],
   "feeds": [
     {
-      "name": "darkfallblog",
-      "url": "http://www.darkfallonline.com/blog/feed/",
-      "interval": 10,
-      "emitOnStart": false 
-    },
-    {
-      "name": "massively",
-      "url": "http://massively.joystiq.com/rss.xml",
-      "interval": 10,
+      "name": "emberblog",
+      "url": "http://www.embersofcaerus.com/external.php",
+      "interval": 1,
       "emitOnStart": false
     }
   ],
   "karma": {
     "values": {
-      "willwh": 1
+      "willwh": 9128,
+      "laugh": 1,
+      "Slash_Redhand": 0,
+      "DaveB": 10000,
+      "Yeti": 1,
+      "forsakenbot": 0,
+      "Kirst": 1,
+      "Kristy": 0,
+      "Wulvgar": 1
+    },
+    "preferences": {
+      "willwh": "elephant",
+      "Slash_Redhand": "apples",
+      "[WSX]Thradok": "water"
     }
   }
 }
