--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "kohai": "bin/kohai"
   },
   "main": "./lib/kohai",
+  "scripts": {
+    "test": "vows --spec --isolate"
+  },
   "dependencies": {
      "hook.io": "0.8.x",
      "colors": "0.5.x",
      "broadway": "0.1.x",
-     "hook.io-irc": "0.4.x"
+     "hook.io-irc": "0.4.x",
+     "flatiron": "0.1.x",
+     "director": "1.0.x",
+     "utile": "0.0.x",
+     "hookio-broadway": "0.0.x"
+  },
+  "devDependencies": {
+    "vows": "0.6.x"
   },
   "engines": {
     "node": ">= 0.4.x < 0.7.x"
