--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "kohai",
   "description": "IRC bot for managing real-time data events.",
   "version": "0.1.3-1",
-  "author": "AvianFlu <charlie@charlieistheman.com>",
+  "author": "Nodejitsu Inc. <info@nodejitsu.com>",
+  "maintainers": [
+    "AvianFlu <avianflu@nodejitsu.com>",
+    "Marak <marak@nodejitsu.com>"
+  ],
   "repository": {
-    "type": "git", 
-    "url": "http://github.com/nodejitsu/kohai.git" 
+    "type": "git",
+    "url": "http://github.com/nodejitsu/kohai.git"
   },
   "bin": {
     "kohai": "bin/kohai"
   },
   "main": "./lib/kohai",
   "dependencies": {
-     "hook.io": "0.7.x",
-     "colors": "0.5.x",
-     "hook.io-irc": "0.4.x",
-     "hook.io-twitter": "0.2.x",
-     "hook.io-mailer": "0.3.x"
+    "hook.io": "0.7.x",
+    "colors": "0.5.x",
+    "hook.io-irc": "0.4.x",
+    "hook.io-twitter": "0.2.x",
+    "hook.io-mailer": "0.3.x"
   },
   "engines": {
     "node": ">= 0.4.x < 0.7.x"
-  } 
+  }
 }
+
