--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.3-1",
   "author": "Nodejitsu <support@nodejitsu.com>",
   "repository": {
-    "type": "git", 
-    "url": "http://github.com/nodejitsu/kohai.git" 
+    "type": "git",
+    "url": "http://github.com/nodejitsu/kohai.git"
   },
   "bin": {
     "kohai": "bin/kohai"
@@ -15,18 +15,17 @@
     "test": "vows --spec --isolate"
   },
   "dependencies": {
-     "colors": "0.5.x",
-     "broadway": "0.1.x",
-     "hook.io-irc": "0.4.x",
-     "flatiron": "0.1.x",
-     "director": "1.0.x",
-     "utile": "0.0.x",
-     "hookio-broadway": "0.0.x"
+    "colors": "0.5.x",
+    "broadway": "0.1.x",
+    "director": "1.0.x",
+    "utile": "0.0.x",
+    "eventemitter2": "~0.4.9",
+    "flatiron": "~0.2.2"
   },
   "devDependencies": {
     "vows": "0.6.x"
   },
   "engines": {
     "node": ">= 0.4.x < 0.7.x"
-  } 
+  }
 }
